2009-01-18  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/scplugin.c, src/speller.c:
   Update to Geany API 126 - LexOMS was removed.


2009-01-14  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/scplugin.c:
   Fix deprecated usage of g_win32_get_package_installation_directory(),
   pass NULL as package name.
 * po/de.po, src/gui.c, src/scplugin.c, src/speller.c, src/gui.h,
   src/scplugin.h, src/speller.h:
   Update copyright information.


2008-12-06  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/scplugin.c, src/gui.c, src/speller.c:
   Update to Geany API 115 - use geanyfunctions.h, from Nick's patch.


2008-11-30  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/gui.c:
   Show the 'Suggestions' sub menu in the editor menu also when we
   have a misspelled word but no suggestions.
   If there is a selection use it instead of the current word when
   updating the editor menu.


2008-11-21  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/scplugin.c, src/gui.c:
   Make use of ui_image_menu_item_new().


2008-11-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/speller.c, src/gui.c:
   Update to Geany API 108 - indicator functions renamed.


2008-11-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/speller.c, src/speller.h, src/gui.c:
   When replacing a misspelled word with a suggestion, add this
   replacement to the spell checker to remember it in further checks.
 * src/gui.c, src/scplugin.c, src/speller.c, src/gui.h, src/scplugin.h:
   Move SpellClickInfo struct into gui.c.
 * src/gui.c:
   Remove SpellClickInfo::suggs and retrieve the suggestion text from
   the menu item label directly.
   Remove the limit of showing a maximum of 10 suggestions, instead
   add sub menus for more suggestions if available, similar to what
   'gtkspell' does.
   Fix an endless loop and some mismatches in clearing indicators when
   using 'Add to Dictionary' and 'Ignore All'.

